fix: only show pagination if there's more than one page

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -19,6 +19,7 @@
         </div>
     </section>
 		{% endif %}
-    {% include 'components/pagination.njk' %}
-<article>
+		{% if pagination.pages.length > 1 %}
+		{% include 'components/pagination.njk' %}
+		{% endif %}<article>
 {% endblock %}
