--- a/src/views.njk
+++ b/src/views.njk
@@ -20,6 +20,8 @@ pagination:
             </div>
             {% endfor %}
         </div>
+				{% if pagination.pages.length > 1 %}
         {% include 'components/pagination.njk' %}
-    </article>
+				{% endif %}
+		    </article>
 {% endblock %}
