--- a/src/news.njk
+++ b/src/news.njk
@@ -19,6 +19,8 @@ pagination:
             </div>
             {% endfor %}
         </div>
+				{% if pagination.pages.length > 1 %}
         {% include 'components/pagination.njk' %}
+				{% endif %}
     </article>
 {% endblock %}
