--- a/src/scss/components/_news-and-views.scss
+++ b/src/scss/components/_news-and-views.scss
@@ -18,9 +18,9 @@
 				// resize images
 				.news-item-img {
 					display: block;
+					height: 100%;
 					margin: 0 auto;
-					max-height: 100%;
-					max-width: 100%;
+					width: 100%;
 				}
 			}
 
