--- a/src/views.njk
+++ b/src/views.njk
@@ -1,6 +1,5 @@
 ---
 permalink: /views/{% if pagination.pageNumber > 0 %}page/{{ pagination.pageNumber + 1 }}/{% endif %}
-pageContext: views
 pagination:
   data: collections.views
   size: 10
@@ -11,6 +10,12 @@ pagination:
 {% set pageTitle = 'Views (Page ' + currentPage + ')' %}
 
 {% block content %}
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+        <symbol id="placeholder" viewBox="-4 -4 224 224">
+            {% include 'svg/placeholder.svg' %}
+        </symbol>
+    </svg>
+
     <article class="views">
         <h1>Views</h1>
         <div class="news-grid">
@@ -23,5 +28,5 @@ pagination:
 				{% if pagination.pages.length > 1 %}
         {% include 'components/pagination.njk' %}
 				{% endif %}
-		    </article>
+    </article>
 {% endblock %}
