fix: address review suggestions

--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
     <article class="tags">
-        <h1>Tag: {{ tagItem.title }}</h1>
+        <h1>Tag: “{{ tagItem.title }}”</h1>
         <div class="news-grid">
 					{% for item in tagItem.posts %}
 					<div class="api-content">
