fix: infusion npm implementation

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -10,13 +10,12 @@
 		{% block headerScripts %}
 		{% endblock %}
 		<!-- CSS files for UI Options-->
-    <link rel="stylesheet" type="text/css" href="/infusion/src/framework/core/css/fluid.css" />
-    <link rel="stylesheet" type="text/css" href="/infusion/src/framework/preferences/css/Enactors.css" />
-    <link rel="stylesheet" type="text/css" href="/infusion/src/framework/preferences/css/PrefsEditor.css" />
-    <link rel="stylesheet" type="text/css" href="/infusion/src/framework/preferences/css/SeparatedPanelPrefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="/infusion/dist/assets/src/framework/preferences/css/Enactors.css" />
+    <link rel="stylesheet" type="text/css" href="/infusion/dist/assets/src/framework/preferences/css/PrefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="/infusion/dist/assets/src/framework/preferences/css/SeparatedPanelPrefsEditor.css" />
 
     <!-- The Infusion Library for UI Options -->
-    <script type="text/javascript" src="/infusion/infusion-custom.js"></script>
+    <script type="text/javascript" src="/infusion/dist/infusion-uio.min.js"></script>
 	</head>
 	<body>
 		<div id="defaultContainer">
