fix: applied figma styling to uio tap using important

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -39,7 +39,8 @@
                 terms: {
                     templatePrefix: "/infusion/src/framework/preferences/html",
                     messagePrefix: "/infusion/src/framework/preferences/messages"
-                }
+                },
+								"tocMessage": "/infusion/src/framework/preferences/messages/tableOfContents-enactor.json"
             });
         })
     </script>
