--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -6,6 +6,7 @@
 	#defaultContainer header .site-nav-wrapper .site-nav nav a:hover,
 	#defaultContainer .content-wrapper .tags-info .tags a:focus,
 	#defaultContainer .content-wrapper .tags-info .tags a:hover, {
-		border: rem(2) solid $c;
+		// border: rem(2) solid $c;
+		box-shadow: inset 0 0 0 rem(2) $c;
 	}
 }
