fix: added swap value to font display for font-faces  add preload for infusion uio min js script

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,6 +7,7 @@
 		{% include 'globals/meta.njk' %}
 		<link rel="stylesheet" href="/css/main.css" />
 		<script src="/js/main.js" defer></script>
+		<link rel="preload" href="/lib/infusion/dist/infusion-uio.min.js" as="script">
 		{% block headerScripts %}
 		{% endblock %}
 		<!-- CSS files for UI Options-->
