--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,4 +1,5 @@
 @font-face {
+	font-display: swap;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 400;
@@ -10,6 +11,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Fira Sans';
 	font-style: italic;
 	font-weight: 400;
@@ -21,6 +23,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 500;
@@ -32,6 +35,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 600;
@@ -43,6 +47,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 700;
@@ -54,6 +59,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 400;
