--- a/src/scss/components/_brand.scss
+++ b/src/scss/components/_brand.scss
@@ -14,9 +14,11 @@
 	.logo {
 		height: rem(52);
 		margin: 0 rem(16);
+		width: rem(52);
 	}
 
 	.logotype {
+		height: rem(32);
 		width: rem(200);
 	}
 }
