--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -9,6 +9,21 @@
 		<script src="/js/main.js" defer></script>
 		<link rel="preload" href="/lib/infusion/dist/infusion-uio.min.js" as="script">
 		{% block headerScripts %}{% endblock %}
+
+		<!-- Fonts -->
+		<link rel="preload" href="/lib/infusion/dist/assets/src/lib/opensans/fonts/OpenSans-Light.woff" as="font" />
+		<link rel="preload" href="/lib/infusion/dist/assets/src/lib/opensans/fonts/OpenSans-Regular.woff" as="font" />
+		<link rel="preload" href="/lib/infusion/dist/assets/src/lib/opensans/fonts/OpenSans-SemiBold.woff" as="font" />
+
+		<link rel="preload" href="/lib/infusion/dist/assets/src/framework/preferences/fonts/PrefsFramework-Icons.woff" as="font" />
+
+		<link rel="preload" href="/lib/infusion/src/components/orator/fonts/Orator-Icons.woff" as="font" />
+
+		<link rel="preload" href="lib/infusion/dist/assets/src/lib/open-dyslexic/fonts/OpenDyslexic-Bold.woff" as="font" />
+		<link rel="preload" href="lib/infusion/dist/assets/src/lib/open-dyslexic/fonts/OpenDyslexic-BoldItalic.woff" as="font" />
+		<link rel="preload" href="lib/infusion/dist/assets/src/lib/open-dyslexic/fonts/OpenDyslexic-Italic.woff" as="font" />
+		<link rel="preload" href="lib/infusion/dist/assets/src/lib/open-dyslexic/fonts/OpenDyslexic-Regular.woff" as="font" />
+
 		<!-- CSS files for UI Options-->
 		<link rel="preload" href="/lib/infusion/dist/assets/src/framework/preferences/css/Enactors.css" as="style" onload="this.rel='stylesheet'"/>
 		<link rel="preload" href="/lib/infusion/dist/assets/src/framework/preferences/css/PrefsEditor.css" as="style" onload="this.rel='stylesheet'"/>
