--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -25,9 +25,13 @@
 		<link rel="preload" href="lib/infusion/dist/assets/src/lib/open-dyslexic/fonts/OpenDyslexic-Regular.woff" as="font" />
 
 		<!-- CSS files for UI Options-->
-		<link rel="preload" href="/lib/infusion/dist/assets/src/framework/preferences/css/Enactors.css" as="style" onload="this.rel='stylesheet'"/>
-		<link rel="preload" href="/lib/infusion/dist/assets/src/framework/preferences/css/PrefsEditor.css" as="style" onload="this.rel='stylesheet'"/>
-		<link rel="preload" href="/lib/infusion/dist/assets/src/framework/preferences/css/SeparatedPanelPrefsEditor.css" as="style" onload="this.rel='stylesheet'"/>
+		<link rel="preload" href="/lib/infusion/dist/assets/src/framework/preferences/css/Enactors.css" as="style" />
+		<link rel="preload" href="/lib/infusion/dist/assets/src/framework/preferences/css/PrefsEditor.css" as="style" />
+		<link rel="preload" href="/lib/infusion/dist/assets/src/framework/preferences/css/SeparatedPanelPrefsEditor.css" as="style" />
+
+    <link rel="stylesheet" type="text/css" href="/lib/infusion/dist/assets/src/framework/preferences/css/Enactors.css" />
+    <link rel="stylesheet" type="text/css" href="/lib/infusion/dist/assets/src/framework/preferences/css/PrefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="/lib/infusion/dist/assets/src/framework/preferences/css/SeparatedPanelPrefsEditor.css" />
 
 		<!-- The Infusion Library for UI Options -->
 		<script type="text/javascript" src="/lib/infusion/dist/infusion-uio.min.js"></script>
