feat: svgs now adjust colors to high contrast themes

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,1 +1,18 @@
 // Mixins.
+@mixin uio-focus-style($fColor, $bColor) {
+	// social media icons
+	footer .footer-content .social-media .social-media-icons a {
+		svg path {
+			fill: $bColor;
+			stroke: $fColor;
+		}
+
+		&:hover,
+		&:focus {
+			svg path {
+				fill: $fColor;
+				stroke: $bColor;
+			}
+		}
+	}
+}
