--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -10,7 +10,7 @@ $font-weight-bold: 700;
 /** Max Widths **/
 $max-width-margins: rem(1600);
 
-/** Colours **/
+/** Colors **/
 
 // Primary
 $blue-dark: #6895c6;
