fix: use colour code from infusion

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -39,6 +39,7 @@ $orange-focus: #fadc90;
 $orange-light: #5c81a9;
 
 // UIO
+$uio-themes: ("bw": #000, "wb": #fff, "yb": #ff0, "by": #000, "lgdg": #bdbdbb, "gd": #888, "gw":  #6c6c6c, "bbr": #000);
 $yellow: #ff0;
 $white: #fff;
 $grey: #bdbdbb;
