--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,6 +4,7 @@
 <!doctype html>
 	<html lang="en-ca">
 	<head>
+		{% include 'globals/google-analytics.njk' %}
 		{% include 'globals/meta.njk' %}
 		<link rel="stylesheet" href="/css/main.css" />
 		<script src="/js/main.js" defer></script>
