--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-	font-display: swap;
+	font-display: optional;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 400;
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-	font-display: swap;
+	font-display: optional;
 	font-family: 'Fira Sans';
 	font-style: italic;
 	font-weight: 400;
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-	font-display: swap;
+	font-display: optional;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 500;
@@ -35,7 +35,7 @@
 }
 
 @font-face {
-	font-display: swap;
+	font-display: optional;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 600;
@@ -47,7 +47,7 @@
 }
 
 @font-face {
-	font-display: swap;
+	font-display: optional;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 700;
@@ -59,7 +59,7 @@
 }
 
 @font-face {
-	font-display: swap;
+	font-display: optional;
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 400;
