--- a/src/_includes/components/brand.njk
+++ b/src/_includes/components/brand.njk
@@ -1,5 +1,5 @@
 <div class="brand">
-    <a {% if page.url === '/' %}aria-current="page"{% endif %} rel="home" href="/">
+    <a {% if page.url === '/' %}aria-current="page"{% endif %} rel="home" href="/" tabindex="1">
         {% include 'svg/logo.svg' %}
         {% include 'svg/logotype.svg' %}
         <span class="screen-reader-only">We Count</span>
