--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,5 +1,5 @@
 // Mixins.
-@mixin uio-focus-style($foregroundColor) {
+@mixin uio-focus-style($foregroundColor, $backgroundColor) {
 	a:focus,
 	a:hover,
 	#defaultContainer header .site-nav-wrapper .site-nav nav a:focus,
@@ -17,10 +17,20 @@
 		box-shadow: 0 0 0 rem(2) $foregroundColor inset;
 	}
 
-	li a[aria-current="page"], // TODO: get inner and outer dashed border to overlap
-	li a[aria-current="page"]::before {
-		border: rem(1) $foregroundColor;
-		border-style: dashed;
+	#defaultContainer .content-wrapper main .pagination .pagination-list li a[aria-current="page"] {
+		background-color: $foregroundColor !important; // Enactors.css in infusion uses !important on this element
+		box-shadow: none;
+		color: $backgroundColor !important; // Enactors.css in infusion uses !important on this element
+	}
+
+	#defaultContainer .content-wrapper main .pagination .pagination-list li a[aria-current="page"]:hover,
+	#defaultContainer .content-wrapper main .pagination .pagination-list li a[aria-current="page"]:focus {
+		box-shadow:
+			0 0 0 rem(4) $backgroundColor,
+			0 0 0 rem(6) $foregroundColor;
+	}
+
+	#defaultContainer .content-wrapper main .pagination .pagination-list li a[aria-current="page"]::before {
 		box-shadow: none;
 	}
 }
